# bookkeeping

./: README.md  hello.py  pyproject.toml
src/: core.py  main.py  models.py  routes.py
src/tests/: test_endpoint_files.py
