[project]
name = "bookkeeping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "pandas>=2.2.3",
    "pydantic-settings>=2.5.2",
    "pytest>=8.3.3",
    "python-multipart>=0.0.12",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.31.0",
]

[tool.basedpyright]
include = ["./*"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

# reportMissingImports = true

pythonVersion = "3.11"
pythonPlatform = "Linux"
# reportGeneralTypeIssues = false

# basedpyright errors and warnings
reportMissingTypeStubs = "warning"

reportAny = false


reportUnknownMemberType = "warning"
# reportUnknownParameterType = false
# reportUnknownVariableType = false

executionEnvironments = [
{ root = "web" }
]

